# ipcamera

./: CMakeLists.txt  README.md  decodethread.cpp  decodethread.h  onvifpipe.cpp  onvifpipe.h
